--- a/app/views/boards/index.html.erb
+++ b/app/views/boards/index.html.erb
@@ -5,6 +5,7 @@
 <table>
   <thead>
     <tr>
+      <th>Id</th>
       <th>board_name</th>
       <th colspan="3"></th>
     </tr>
@@ -13,6 +14,7 @@
   <tbody>
     <% @boards.each do |board| %>
       <tr>
+        <td><%= board.id %></td>
         <td><%= board.board_name %></td>
         <td><%= link_to 'Show', board %></td>
         <td><%= link_to 'Edit', edit_board_path(board) %></td>
