:wrench: add root_path

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,5 +11,10 @@
 
   <body>
     <%= yield %>
+
+    <hr>
+    <ul>
+      <li><%= link_to 'back to root', root_path %></li>
+    </ul>
   </body>
 </html>
